# can-dbc

./: .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  Cargo.lock.msrv  Cargo.toml  LICENSE-MIT  README.md  TODO.md  deny.toml  justfile
.github/workflows/: ci.yml
docs/: diagram.mmd
examples/: file_parser.rs  read_and_write_dbc.rs
src/: attributes.rs  dbc.rs  env_variables.rs  lib.rs  message.rs  nodes.rs  parser.rs  parser_tests.rs  signal.rs  tests.rs
src/ast/: access_node.rs  access_type.rs  attr_default.rs  attribute_default.rs  attribute_definition.rs  attribute_definition_for_relation.rs  attribute_value.rs  attribute_value_for_object.rs  attribute_value_for_object_type.rs  attribute_value_for_relation.rs  attribute_value_for_relation_type.rs  attribute_value_type.rs  attribute_valued_for_object_type.rs  baudrate.rs  byte_order.rs  comment.rs  dbc.rs  env_type.rs  environment_variable.rs  environment_variable_data.rs  error.rs  extended_multiplex.rs  extended_multiplex_mapping.rs  message.rs  message_id.rs  message_transmitter.rs  mod.rs  multiplex_indicator.rs  node.rs  numeric_value.rs  signal.rs  signal_attribute_value.rs  signal_extended_value_type.rs  signal_extended_value_type_list.rs  signal_groups.rs  signal_type.rs  signal_type_ref.rs  symbol.rs  transmitter.rs  val_description.rs  (+4 more)
src/extend/: mod.rs  signal.rs
tests/: cantool-dbcs.rs  manual.rs  parsing.rs  snapshots.rs  test-snapshots.rs
tests/snapshots-cantools-dbcs/: !error___CamelCaseEmpty.snap  !error___abs.snap  !error___choices.snap  !error___cp1252.snap  !error___emc32.snap  !error___empty_ns.snap  !error___issue_168.snap  !error___issue_199.snap  !error___issue_199_extended.snap  !error___issue_228.snap  !error___socialledge.snap  !error___vehicle.snap  add_two_dbc_files_1.snap  add_two_dbc_files_2.snap  attributes.snap  bad_message_length.snap  big_numbers.snap  bus_comment.snap  dump_signal_choices.snap  empty_choice.snap  floating_point.snap  issue_163_newline.snap  issue_184_extended_mux_cascaded.snap  issue_184_extended_mux_cascaded_dumped.snap  issue_184_extended_mux_independent_multiplexors.snap  issue_184_extended_mux_independent_multiplexors_dumped.snap  issue_184_extended_mux_multiple_values.snap  issue_184_extended_mux_multiple_values_dumped.snap  issue_207_sig_plus.snap  issue_62.snap  issue_63.snap  j1939.snap  long_names.snap  long_names_multiple_relations.snap  long_names_multiple_relations_dumped.snap  mod_name_len_dest.snap  mod_name_len_src.snap  motohawk.snap  motohawk_with_comments.snap  msxii_system_can.snap  (+17 more)
tests/snapshots-dbc-cantools/: !error___BU_BO_REL_.snap  !error___BU_BO_REL_Message.snap  !error___abs.snap  !error___attributes_relation.snap  !error___choices.snap  !error___cp1252.snap  !error___emc32.snap  !error___empty_ns.snap  !error___foobar.snap  !error___issue_168.snap  !error___issue_199.snap  !error___issue_199_extended.snap  !error___issue_228.snap  !error___no_signals.snap  !error___open_actuator.snap  !error___socialledge.snap  !error___vehicle.snap  abs.snap  add_two_dbc_files_1.snap  add_two_dbc_files_2.snap  attribute_Event.snap  attributes.snap  attributes_relation.snap  bad_message_length.snap  big_numbers.snap  bus_comment.snap  bus_comment_bare.snap  bus_comment_bare_out.snap  choices.snap  choices_issue_with_name.snap  comments_hex_and_motorola_converted_from_sym.snap  dump_signal_choices.snap  empty_choice.snap  fd_test.snap  floating_point.snap  floating_point_use_float.snap  issue_163_newline.snap  issue_184_extended_mux_cascaded.snap  issue_184_extended_mux_cascaded_dumped.snap  issue_184_extended_mux_independent_multiplexors.snap  (+40 more)
tests/snapshots/canpy/: DBC_template.snap
tests/snapshots/dbc-cantools/: !error___big_numbers.snap  !error___issue_168.snap  BU_BO_REL_.snap  BU_BO_REL_Message.snap  CamelCaseEmpty.snap  abs.snap  add_two_dbc_files_1.snap  add_two_dbc_files_2.snap  attribute_Event.snap  attributes.snap  attributes_relation.snap  bad_message_length.snap  big_numbers.snap  bus_comment.snap  bus_comment_bare.snap  bus_comment_bare_out.snap  choices.snap  choices_issue_with_name.snap  comments_hex_and_motorola_converted_from_sym.snap  cp1252.snap  dump_signal_choices.snap  emc32.snap  empty_choice.snap  empty_ns.snap  fd_test.snap  floating_point.snap  floating_point_use_float.snap  foobar.snap  issue_163_newline.snap  issue_168.snap  issue_184_extended_mux_cascaded.snap  issue_184_extended_mux_cascaded_dumped.snap  issue_184_extended_mux_independent_multiplexors.snap  issue_184_extended_mux_independent_multiplexors_dumped.snap  issue_184_extended_mux_multiple_values.snap  issue_184_extended_mux_multiple_values_dumped.snap  issue_199.snap  issue_199_extended.snap  issue_207_sig_plus.snap  issue_228.snap  (+41 more)
tests/snapshots/opendbc/: !error___FORD_CADS_64.snap  !error___toyota_radar_dsu_tssp.snap  ESR.snap  FORD_CADS.snap  FORD_CADS_64.snap  acura_ilx_2016_nidec.snap  bmw_e9x_e8x.snap  cadillac_ct6_chassis.snap  cadillac_ct6_object.snap  cadillac_ct6_powertrain.snap  chrysler_cusw.snap  chrysler_pacifica_2017_hybrid_private_fusion.snap  comma_body.snap  fca_giorgio.snap  ford_cgea1_2_bodycan_2011.snap  ford_cgea1_2_ptcan_2011.snap  (+43 more)
tests/unit/: attribute_default.rs  attribute_definition.rs  attribute_value_for_object.rs  byte_order.rs  comment.rs  common.rs  environment_variable.rs  environment_variable_data.rs  extended_multiplex.rs  lexer.rs  main.rs  message.rs  message_id.rs  message_transmitter.rs  multiplex_indicator.rs  node.rs  numeric_value.rs  signal.rs  signal_extended_value_type_list.rs  signal_groups.rs  symbol.rs  val_description.rs  value_description.rs  value_table.rs  value_type.rs  version.rs
(+56 files in other folders)
