[package]
name = "can-dbc"
version = "7.0.0"
license = "MIT OR Apache-2.0"
description = "A parser for the DBC format. The DBC format is used to exchange CAN network data."
repository = "https://github.com/oxibus/can-dbc"
authors = ["marcelbuesing <buesing.marcel@googlemail.com>"]
keywords = ["dbc", "can", "automotive", "ecu"]
categories = ["embedded", "no-std", "encoding", "parsing"]
edition = "2021"
rust-version = "1.74"

[[example]]
name = "file_parser"
path = "examples/file_parser.rs"
required-features = ["encodings"]

[features]
default = ["serde", "encodings"]
# Support decoding from all standard encodings, e.g. cp1251 commonly used for dbc
encodings = ["dep:encoding_rs"]
serde = ["dep:serde"]
# This feature is deprecated per clippy::redundant_feature_names.  Use `serde` instead.
with-serde = ["serde"]

[dependencies]
encoding_rs = { version = "0.8", optional = true }
nom = { version = "8.0", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
clap = { version = "4.5.0", features = ["cargo", "derive"] }
codegen = "0.2"  # Used in README code block
insta = { version = "1.39", features = ["yaml"] }
test_each_file = "0.3.6"

[lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Verified allows
ref_option = "allow"  # required by derive-getters
redundant_feature_names = "allow"  # remove once with-serde feature is removed
needless_doctest_main = "allow" # README code block contains main function
# TODO: fix these if it makes sense
must_use_candidate = "allow"     # 12
missing_errors_doc = "allow"      # 8
similar_names = "allow"      # 4
needless_pass_by_value = "allow"      # 4
